<resources>
    <string name="app_name" translatable="false">Pro Lab</string>


    <string name="title_section1" translatable="false">Hub</string>
    <string name="title_section2">Project</string>
    <string name="title_section3">Functionalities</string>
    <string name="title_section4">Members</string>
    <string name="title_section5">Settings</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_user_name">Username</string>
    <string name="prompt_password">Password</string>
    <string name="valid_login">LogIn</string>
    <string name="login_register">Register</string>

    <string name="prompt_firstname">Firstname</string>
    <string name="prompt_surname">Surname</string>
    <string name="already_account">Have you an account ?</string>
    <string name="prompt_email">Email</string>


    <string name="title_activity_create_project">Create Project</string>
    <string name="create_project_new_name">Name</string>
    <string name="Create_project_pushline">PunshLine</string>
    <string name="create_project_description">Description</string>
    <string name="create_project_valid">Accept</string>
    <string name="create_project_url">URL</string>
    <string name="title_activity_select_project">Select project</string>

    <string name="add_project">Add Project</string>
    <string name="title_activity_create_fonctionnality">CreateFonctionnality</string>

    <string name="hello_world">Hello world!</string>
    <string name="prompt_create_fonctionnalities_name">Name</string>
    <string name="prompte_create_fonctionnality_description">Description</string>
    <string name="create_fonctionnalitiy_button">Create</string>
    <string name="title_activity_info_fonctionnalities">InfoFonctionnalities</string>
    <string name="info_fonctionnalities_text_list_members">List members</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info_user">InfoUser</string>
    <string name="popup_add_user">Add User</string>
    <string name="pop_up_accept">Accept</string>
    <string name="pop_up_cancel">Cancel</string>
    <string name="popup_add_username">Username</string>
    <string name="popup_remove_user">Remove User :</string>
    <string name="title_activity_modif_project">ModifProject</string>
    <string name="update_failed">Update Failed. Check your internet connection.</string>
    <string name="update_ok">Success</string>
    <string name="action_update">Update</string>
    <string name="popup_remove_project">Delete Project</string>
    <string name="title_activity_edit_fonctionnality">EditFonctionnality</string>

</resources>
