<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.tbe.prolab.Users.LogIn"
    android:orientation="vertical"
    android:animateLayoutChanges="true">

    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_progressbar" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/user_name"
        android:hint="@string/prompt_user_name"
        android:visibility="visible"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password"
        android:hint="@string/prompt_password"
        android:visibility="visible"
        android:singleLine="true" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/email"
        android:hint="@string/prompt_email"
        android:visibility="gone"
        android:textIsSelectable="true"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstname"
        android:visibility="gone"
        android:hint="@string/prompt_firstname"
        android:singleLine="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lastname"
        android:visibility="gone"
        android:hint="@string/prompt_surname"
        android:singleLine="true"
    />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/valid_login"
        android:id="@+id/accept"
        android:onClick="onLogin" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:id="@+id/register"
        android:onClick="goRegisterActivity" />

</LinearLayout>
