<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_fonctionnality_name"
        android:hint="@string/prompt_create_fonctionnalities_name" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_fonctionality_description"
        android:hint="@string/prompte_create_fonctionnality_description" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:id="@+id/create_fonctionality_date_picker"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/create_fonctionnalitiy_button"
        android:id="@+id/create_fonctionnality_button"
        android:onClick="onCreateFonctionnality"/>
        </LinearLayout>
</ScrollView>


